<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            app:tint="@color/font_dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@null"
            android:src="@drawable/icon_back"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/Text.Title1"
            android:textColor="@color/font_dark_gray"
            android:text="@string/setting_toolbar_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="24dp"/>
    
    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/container_toolbar"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:contentDescription="@null"
        android:src="@drawable/icon_default_profile"/>

    <TextView
        android:id="@+id/text_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintBottom_toTopOf="@id/text_profile_email"
        app:layout_constraintStart_toEndOf="@id/image_profile"
        android:textAppearance="@style/Text.Title2"
        android:textColor="@color/font_dark_gray"
        tools:text="김명석"/>

    <ImageView
        android:id="@+id/icon_provider"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/text_profile_name"
        app:layout_constraintBottom_toBottomOf="@id/text_profile_name"
        app:layout_constraintStart_toEndOf="@id/text_profile_name"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/text_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_profile_name"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="@id/text_profile_name"
        android:textAppearance="@style/Text.Body2"
        android:textColor="@color/font_gray"
        tools:text="audxo112@naver.com"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_gifticon_count"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:backgroundTint="@color/white"
        android:background="@drawable/bg_rect_r16">

        <TextView
            android:id="@+id/text_usable_gifticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider_gifticon_count"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_usable_gifticon_count"
            android:textAppearance="@style/Text.Body1"
            android:textColor="@color/font_dark_gray"
            android:text="@string/setting_usable_gifticon"/>

        <TextView
            android:id="@+id/text_usable_gifticon_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_usable_gifticon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider_gifticon_count"
            android:textAppearance="@style/Text.Title2"
            android:textColor="@color/medium_pink"
            tools:text="28개"/>

        <View
            android:id="@+id/divider_gifticon_count"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/text_used_gifticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/divider_gifticon_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_used_gifticon_count"
            android:textAppearance="@style/Text.Body1"
            android:textColor="@color/font_dark_gray"
            android:text="@string/setting_used_gifticon"/>

        <TextView
            android:id="@+id/text_used_gifticon_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_used_gifticon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider_gifticon_count"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/Text.Title2"
            android:textColor="@color/gray"
            tools:text="12개"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_group_title_etc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_gifticon_count"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:textAppearance="@style/Text.Title4"
        android:textColor="@color/font_dark_gray"
        android:text="@string/setting_etc_group_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_group_etc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_group_title_etc"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:backgroundTint="@color/white"
        android:background="@drawable/bg_rect_r16">

        <TextView
            android:id="@+id/btn_etc_personal_info_policy"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider_group_etc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/Text.Title7"
            android:textColor="@color/font_dark_gray"
            android:text="@string/setting_etc_personal_info_policy"/>

        <View
            android:id="@+id/divider_group_etc"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/btn_etc_open_source_library"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/divider_group_etc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/Text.Title7"
            android:textColor="@color/font_dark_gray"
            android:text="@string/setting_etc_open_source_library"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_group_title_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_group_etc"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:textAppearance="@style/Text.Title4"
        android:textColor="@color/font_dark_gray"
        android:text="@string/setting_account_group_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_group_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_group_title_account"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:backgroundTint="@color/white"
        android:background="@drawable/bg_rect_r16">

        <TextView
            android:id="@+id/btn_account_logout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider_group_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/Text.Title7"
            android:textColor="@color/font_dark_gray"
            android:text="@string/setting_account_logout"
            tools:visibility="gone"/>

        <View
            android:id="@+id/divider_group_account"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_account_logout"
            app:layout_constraintBottom_toTopOf="@id/btn_account_withdrawal"
            android:background="@color/light_gray"
            tools:visibility="gone"/>

        <TextView
            android:id="@+id/btn_account_withdrawal"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/divider_group_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/Text.Title7"
            android:textColor="@color/font_dark_gray"
            android:text="@string/setting_account_withdrawal"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>